--- a/app/src/main/res/layout/player_listview_layout.xml
+++ b/app/src/main/res/layout/player_listview_layout.xml
@@ -1,20 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="#FFD588"
+    android:orientation="vertical">
+
     <TextView
+        android:id="@+id/playerClanLevelTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textViewTrophies" />
+        android:layout_centerVertical="true"
+        android:textSize="22sp"
+        android:layout_marginLeft="5dp"
+        android:minEms="1"
+        android:textColor="#000000"/>
+
     <TextView
+        android:id="@+id/playerexpLevelTextView"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="20dp"
+        android:layout_toEndOf="@id/playerClanLevelTextView"
+        android:layout_toRightOf="@id/playerClanLevelTextView"
+        android:background="@drawable/lvl_background"
+        android:gravity="center_vertical|center_horizontal"
+        android:minEms="2"
+        android:text="sdsdsd"
+        android:textColor="#ffffff"/>
+
+
+
+    <ImageView
+        android:id="@+id/playerBadgeImgView"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_margin="2dp"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@+id/playerexpLevelTextView"
+        android:layout_toRightOf="@+id/playerexpLevelTextView"/>
+
+    <TextView
+        android:id="@+id/playerNameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_toEndOf="@+id/playerBadgeImgView"
+        android:layout_toRightOf="@+id/playerBadgeImgView"
         android:text="New Text"
-        android:id="@+id/textViewName" />
+        android:textColor="@android:color/black"
+        android:textSize="12sp"/>
+
+
     <TextView
+        android:id="@+id/playerRoleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/playerBadgeImgView"
+        android:layout_marginBottom="2dp"
+        android:layout_toEndOf="@+id/playerBadgeImgView"
+        android:layout_toRightOf="@+id/playerBadgeImgView"
         android:text="New Text"
-        android:id="@+id/textViewExpLevel" />
-</LinearLayout>
+        android:textColor="@android:color/black"
+        android:textSize="10sp" />
+
+    <!--<LinearLayout-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:orientation="vertical"-->
+        <!--android:layout_toLeftOf="@+id/playerTrophiesTextView">-->
+        <!--<TextView-->
+            <!--android:id="@+id/playerDonationtextView"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentTop="true"-->
+            <!--android:textAlignment="textEnd"-->
+            <!--android:layout_margin="5dp"-->
+            <!--android:text="sd"-->
+            <!--android:textColor="@android:color/black"-->
+            <!--android:textSize="15dp"-->
+            <!--/>-->
+
+        <TextView
+            android:id="@+id/playerDonationReceivedtextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_toStartOf="@+id/playerTrophiesTextView"
+            android:layout_toLeftOf="@+id/playerTrophiesTextView"
+            android:textAlignment="viewEnd"
+            android:gravity="end|bottom"
+            android:layout_margin="5dp"
+            android:text="sd"
+            android:textColor="@android:color/black"
+            android:textSize="15dp"
+            />
+    <!--</LinearLayout>-->
+    <TextView
+        android:id="@+id/playerTrophiesTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="2dp"
+        android:background="@drawable/custom_text_view_border"
+        android:minEms="3"
+        android:text="demo"
+        android:textColor="@android:color/black"
+        android:textSize="15sp"/>
+
+
+</RelativeLayout>
